--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@ k-means, global and fast k-means using k-d trees.
                         <h3 class="mb-0"> </h3>
                         <div class="subheading mb-3">Extra-curriculars</div>
                         
-                        <li>Volunteered for National Service Scheme (NSS) for 2 academic years - 2015-17
+                        <li> Avid chess Player. Care to challenge? <a href="https://www.chess.com/member/vaibhva97"> Challenge</a>
                         </li>
-                        <li>National Level Floor ball Player, 60th National School Games, 2014-15
+                        <li> Long Distance Running- 10k check - next goal-half marathon
                         </li>
                     </div>
                     
