--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ k-means, global and fast k-means using k-d trees.
                         <h3 class="mb-0"> </h3>
                         <div class="subheading mb-3">Extra-curriculars</div>
                         
-                        <li> Avid chess Player. Care to challenge? <a href="https://www.chess.com/member/vaibhva97"> Challenge</a>
+                        <li> Avid chess Player. Care to challenge me? <button onclick="https://www.chess.com/member/vaibhva97" style='font-size:24px'>Challenge <i class='fas fa-chess-board'></i></button>
                         </li>
                         <li> Long Distance Running- 10k check - next goal-half marathon
                         </li>
