--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@ k-means, global and fast k-means using k-d trees.
                         <h3 class="mb-0"> </h3>
                         <div class="subheading mb-3">Extra-curriculars</div>
                         
-                        <li> Avid chess Player. Care to challenge me? <button onclick="https://www.chess.com/member/vaibhva97" style='font-size:24px'>Challenge <i class='fas fa-chess-board'></i></button>
-                        </li>
-                        <li> Long Distance Running- 10k check - next goal-half marathon
-                        </li>
+                        <li> Avid chess Player. Care to challenge me? <br>   <button onclick="window.location.href='https://www.chess.com/member/vaibhva97';" class= "btn btn-outline-success">Let's go! <i class='fas fa-chess-board'></i></button>
+                        </li><br>
+                        <li> Long Distance Running- 10k check - next goal-half marathon</li>
+                            <br><img src="assets/img/marathon.jpg" height ="300" width="600">
                     </div>
                     
                 </div>
