--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ k-means, global and fast k-means using k-d trees.
                             modified LFSR circuit is then used to generate the
                             key and that key is used for encryption/decryption
                             of the data through the A5/1 Algorithm. </p>
-                            <a href="http://bvicam.in/INDIACom/news/INDIACom%202019%20Proceedings/Main/papers/2137.pdf"> Click here to read more</a>
+                            <a href="https://drive.google.com/drive/folders/1ZqVdKiOlrpHgMNcgsh0PWGUHeRARaq4F?usp=sharing"> Click here to read more</a>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">MAR 2019</span></div>
                 </div>
@@ -321,7 +321,7 @@ k-means, global and fast k-means using k-d trees.
                             to verify the results produced by it. Implementation and
                             analysis of the same has been done on Verilog. Low Hardware
                             overhead is also maintained with a reasonable test length. </p>
-                            <a href="http://bvicam.in/INDIACom/news/INDIACom%202019%20Proceedings/Main/papers/2137.pdf"> Click here to read more</a>
+                            <a href="https://drive.google.com/file/d/174-1n8mQz8vqX-BnurFHkx_STp5ogRll/view?usp=sharing"> Click here to read more</a>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">MAR 2019</span></div>
                 </div>
