--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="text-primary">Mathur</span>
                 </h1>
                 <div class="subheading mb-5">
-                    1352 Sultanpur Street · Karala, Delhi 110081 · (+91) 7982383466 ·
+                    136 George Street · New Brunswick, New Jersey 08901 · 8484371438 ·
                     <a href="mailto:name@email.com">vaibhavmathur97@gmail.com</a>
                 </div>
                 <h3 class="mb-3">OK. So who am I?</h3>
@@ -85,9 +85,10 @@
                         <div class="subheading mb-3">Citi-Bank, Pune, India</div>
                         <p>Built an Arbitrage calculation software to calculate possible opportunities for cashcarry,
                             equity and
-                            FX markets using Angular, Bootstrap and Spring Test suite framework.</p>
+                            FX markets using Angular, Bootstrap and Spring Test suite framework.</p> 
+                        <p> Worked on the development of security platform for migration of client accounts to a more secure platform</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2020 - July 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -142,6 +143,15 @@
                        </em></p>
                     <footer class="quote-footer"> ― Nelson <cite title="Source Title"> Mandela</cite></footer>
                 </quote><br>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Rutgers University, New Jersey</h3>
+                        <div class="subheading mb-3">Masters in Science</div>
+                        <div> Computer Science</div>
+                        
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2021 - Present</span></div>
+                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Birla Institute of Technology and Science (BITS), Pilani</h3>
