--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                 <br>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">SWE Intern</h3>
+                        <div class="subheading mb-3">Meta, Menlo Park, CA</div>
+                        <p>Work on providing AI solutions with respect to content similarity to the product teams to enable automatic enforcements on tackling various integrity problems that FB and IG face like Hate speech, bullying, harassment, Graphic violence etc.</p> 
+                        
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Developer Analyst</h3>
                         <div class="subheading mb-3">Citi-Bank, Pune, India</div>
                         <p>Built an Arbitrage calculation software to calculate possible opportunities for cashcarry,
@@ -147,7 +156,8 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Rutgers University, New Jersey</h3>
                         <div class="subheading mb-3">Masters in Science</div>
-                        <div> Computer Science</div>
+                        <div> Computer Science </div>
+                        <p>GPA: 4.0/4.0</p>
                         
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">August 2021 - Present</span></div>
