--- a/index.html
+++ b/index.html
@@ -239,6 +239,42 @@
                 </quote><br>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Gesture Recognition using Spiking Neural Networks </h3>
+                        <div class="subheading mb-3">Brain Inspired Computing</div>
+                        <p>
+                        Implemented supervised learning using Spiking Neural Networks on DVS- video Gesture Neuromorphic Dataset for classification task. Applied weight quantization and cosine based learning rate scheduler to achieve benchmark accuracies.
+                        </p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">JAN 2022-MAY 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Multi-Modal Sequence Alignment </h3>
+                        <div class="subheading mb-3">Machine Learning</div>
+                        <p>Implemented the Dropping variant of Dynamic Time Warping Algorithm to align subtitles/steps to the video frames from the 1 million YouCOOK II dataset. The alignment was done first extracting features through a linear model using Drop-DTW loss and then finding optimal alignment using the proposed algorithm.  </p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">JAN 2022-MAY 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Node Classification on CORA Dataset</h3>
+                        <div class="subheading mb-3">Graph Convolutional Networks</div>
+                        <p>Worked on CORA Graph citation dataset to apply node classification to classify each publication
+into one of 7 classes using Graph Convolution Networks.</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">JAN 2022-MAY 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">
+                            Robot Path Planning</h3>
+                        <div class="subheading mb-3">Artificial Intelligence</div>
+                        <p>Implemented AI and reinforcement learning algorithms for a given an artificial agent in a rectangular maze with blocks to learn to reach a goal.Traversal of robots/AI agents was done through the mazes using Informed Search, Logical & Probabilistic Inference, and Machine Learning.</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">SEPT 2021 - DEC 2021</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">ICA(Independent Component Analysis) based Spatial filtering to improve
                             template-based
                             SSVEP Detection </h3>
