--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="text-primary">Mathur</span>
                 </h1>
                 <div class="subheading mb-5">
-                    136 George Street · New Brunswick, New Jersey 08901 · 8484371438 ·
+                    1700 N First Street, San Jose 95112 · 8484371438 ·
                     <a href="mailto:name@email.com">vaibhavmathur97@gmail.com</a>
                 </div>
                 <h3 class="mb-3">OK. So who am I?</h3>
@@ -79,6 +79,16 @@
                     <footer class="quote-footer"> ―  Stephen<cite title="Source Title"> Leacock</cite></footer>
                 </quote>
                 <br>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Software Engineer</h3>
+                        <div class="subheading mb-3">Theom.AI, San Jose, CA</div>
+                        <p>Engineered and managed a high-capacity parser repository in Go, supporting MySQL, T-SQL, PostgreSQL, and SQLServer, enabling the efficient parsing of millions of queries and significantly enhancing data processing accuracy and speed.</p>
+                        <p>Led the development of over 15 Go-based API endpoints for Snowflake database interactions, complying with OpenAPI specifications, which boosted data writing throughput by 20\%.</p>
+                        <p>Excelled in optimizing and managing Arango and Snowflake databases, significantly enhancing UI responsiveness by implementing robust rules for dynamic panel population.</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">June 2023 - Present</span></div>
+                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">SWE Intern</h3>
